<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <description>Simple spring boot project that has a rest api and some serverside
    rendered templates</description>
  <groupId>dev.azivkovic</groupId>
  <artifactId>apiAndSsrExample</artifactId>
  <modelVersion>4.0.0</modelVersion>
  <name>apiAndSsrExample</name>
  <properties>
    <sonar.organization>alekszivko</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <java.version>22</java.version>
    <querydsl.version>5.0.0</querydsl.version>
  </properties>
  <version>0.0.1-SNAPSHOT</version>
  <build>
    <finalName>apiAndSsrExample</finalName>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>PACKAGE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.0</minimum> <!-- bump up in the future overtime to 0.70-->
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>springdoc-openapi-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <phase>integration-test</phase>
          </execution>
        </executions>
        <groupId>org.springdoc</groupId>
        <version>1.4</version>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>start</goal>
            </goals>
            <id>pre-integration-test</id>
          </execution>
          <execution>
            <goals>
              <goal>stop</goal>
            </goals>
            <id>post-integration-test</id>
          </execution>
        </executions>
        <groupId>org.springframework.boot</groupId>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>--enable-preview</compilerArgs>
          <source>22</source>
          <target>22</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>2.5.0</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <!--        <dependency>-->
    <!--            <groupId>org.flywaydb</groupId>-->
    <!--            <artifactId>flyway-core</artifactId>-->
    <!--        </dependency>-->
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>querydsl-apt</artifactId>
      <classifier>jakarta</classifier>
      <groupId>com.querydsl</groupId>
      <scope>provided</scope>
      <version>${querydsl.version}</version>
    </dependency>
    <dependency>
      <artifactId>querydsl-jpa</artifactId>
      <classifier>jakarta</classifier>
      <groupId>com.querydsl</groupId>
      <version>${querydsl.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
      <version>42.7.4</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-testcontainers</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
      <version>3.4.1</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-hateoas</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
  </dependencies>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.4.1</version> <!-- lookup parent from repository -->
  </parent>
</project>